deployments/k8s/kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
---

apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
